<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- APP string -->
    <string name="app_name">PasswordBox</string>
    <string name="title_welcome">Welcome</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Exit</string>
    <string name="action_settings">Add</string>
    <string name="welcome_text">Welcome to PasswordBox App! 
        This app provide a way that you can store your password.
        Other people who access app on your phone can\'t get your password cause the password store in app is encrypted by MD5. 
        It is also avoid your cyber bank locked if you try your password more than the max time.
    </string>
    <!-- widget string -->
    <string name="new_fragment_name_Text">name</string>
    <string name="new_fragment_password_Text">password</string>
    <string name="new_fragment_description_Text">description</string>
    <string name="new_fragment_add_Btn">add</string>
    <string name="verify_fragment_update_Btn">Update</string>
    <string name="verify_fragment_verify_Btn">verify</string>
    <string name="verify_fragment_delete_Btn">delete</string>
    
    <!-- message string -->
    <!-- check message -->
    <string name="check_null_name">please Enter name!</string>
    <string name="check_null_password">please Enter password!</string>
    <string name="check_null_description">please Enter description!</string>
    <string name="check_unchanged">Unchanged!</string>
    <!-- tips -->
    <string name="add_tips">A new Entity added!</string>
    
    <string name="verify_tips_yes">Yes your memory is good!</string>
	<string name="verify_tips_no">That\'s not correct! Try another one.</string>
    
    <string name="delete_tips">Are you sure you want to delete?</string>
    <string name="dekete_done">Delete success!</string>
    
    <string name="dialog_yes">Yes</string>
    <string name="dialog_cancel">Cancel</string>
   
    <string name="update_done">Update done!</string>
    
    <string name="exit_tips">Are you sure you want to exit?</string>
    
    
    
    
    

</resources>
